2018-01-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	Use a database (SQLite, MySQL or ProstgreSQL) to replace the tapelist
	and log.* file
	Read the Amanda-Catalog file
	* perl/*, server-src/*, common-src/conffile.c: Major changes
	* installcheck/*: Fix tests
	* Amanda-Catalog: New documentation document

2018-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2/MySQL.pm, perl/Amanda/DB/Catalog2/PgSQL.pm,
	  perl/Amanda/DB/Catalog2/SQL.pm, perl/Amanda/DB/Catalog2/SQLite.pm,
	  perl/Amanda/DB/Catalog2/log.pm: Update

2018-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Rest/Runs.pm: Undo, bsd_glob is not exported on older
	  perl

2018-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amcheck.c (handle_amcheck_device): NUL terminate the
	  buffer if read return 0

2018-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/amgtar.c: Add missing break
	* common-src/bsdtcp-security.c,
	  common-src/conffile.c,
	  common-src/ssl-security.c,
	  oldrecover-src/extract_list.c,
	  server-src/dumper.c: Fix warning in newer gcc
	* perl/Amanda/Rest/Runs.pm,: Fix warning in newer perl
	* installcheck/Installcheck.pm: Use File::Glob::bsd_glob

2017-12-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Installcheck/Config.pm (remove_source_line): Remove
	  function
	* installcheck/Installcheck/Rest.pm (remove_source_line): Add function
	* installcheck/*.pl: Use remove_source_line for Installcheck::Config

2017-12-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Changer_disk.pl: Fix

2017-12-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/ammessage.c, installcheck/Amanda_Changer_*.pl
	  installcheck/Amanda_Rest_*.pl, installcheck/Amanda_Taper_Scan_*.pl,
	  perl/Amanda/Changer.pm perl/Amanda/Changer/*.pm,
	  perl/Amanda/ScanInventory.pm perl/Amanda/Storage.pm
	  perl/Amanda/Taper/Scan/traditional.pm: Fix Message
