@@ -1,3 +1,6 @@
+2018-01-05  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* server-src/driver.c (tape_action): fix for max_dle_by_volume
+
 2018-01-04  Jean-Louis Martineau <JMartineau@carbonite.com>
 	Use a database (SQLite, MySQL or ProstgreSQL) to replace the tapelist
 	and log.* file
